adding more error / exception handling, html400 401, test fixes